mongodb server 이미지 태그를 multi로 변경

--- a/values/psmdb-db/values.yaml
+++ b/values/psmdb-db/values.yaml
@@ -38,7 +38,7 @@ upgradeOptions:
 
 image:
   repository: percona/percona-server-mongodb
-  tag: 6.0.9-7
+  tag: 6.0.9-7-multi
 
 imagePullPolicy: Always
 # imagePullSecrets: []
